Implemented 1st version of the MATool (CLI client)